--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,5 @@
 	"author": "Leonardo V. Pinheiro",
 	"authorUrl": "https://obsidian.md",
 	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
